k8s/ingress.yaml
iapiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /v1(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: product-v1-service
            port:
              number: 80
      - path: /v1.1(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: product-v1-1-service
            port:
              number: 80
      - path: /v2(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: product-v2-service
            port:
              number: 80
